[package]
name = "convert_to_ubyte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
ocrs = "0.7.0"
tokio = { version = "1.37.0", features = ["full"] }
